test/visibility/type-shadow.good
type-shadow.chpl:12: error: unresolved type specifier 'R(type int(64))'
type-shadow.chpl:11: note: candidates are: R
type-shadow.chpl:12: note: did you forget the 'new' keyword?
